--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "gridsome": "^0.7.3",
-    "gridsome-plugin-flexsearch": "^1.0.5",
+    "gridsome-plugin-flexsearch": "github:hamdy/gridsome-plugin-flexsearch",
     "gridsome-plugin-tailwindcss": "^3.0.1",
     "gridsome-source-graphql": "^1.0.2",
     "gridsome-source-static-meta": "github:noxify/gridsome-source-static-meta#master",
