--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "gridsome": "^0.7.3",
     "gridsome-plugin-flexsearch": "github:hamdy/gridsome-plugin-flexsearch",
+    "gridsome-plugin-remark-prismjs-all": "^0.3.5",
     "gridsome-plugin-tailwindcss": "^3.0.1",
     "gridsome-source-graphql": "^1.0.2",
     "gridsome-source-static-meta": "github:noxify/gridsome-source-static-meta#master",
