--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gridsome/transformer-remark": "^0.6.2",
     "@noxify/gridsome-remark-classes": "^1.0.0",
     "@noxify/gridsome-remark-table-align": "^1.0.0",
+    "axios": "^0.21.1",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "gridsome": "^0.7.3",
@@ -31,7 +32,7 @@
     "tailwindcss-gradients": "^3.0.0",
     "tailwindcss-tables": "^0.4.0",
     "v-tooltip": "^2.0.3",
-    "vue-markdown": "^2.2.4"
+    "vue-markdown": "^2.1.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0"
