--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,17 +1,24 @@
 image:
   file: .gitpod.Dockerfile
-# # Commands to start on workspace startup
 tasks:
-    # - init: bash /workspace/www_threefold_io/gitpod/install.sh
-    - command: |
-        rm -f /tmp/install.sh
-        curl -s -o /tmp/install.sh  https://raw.githubusercontent.com/threefoldfoundation/data_threefold/development/install.sh
+    - name: WIKI
+      command: |
+        export PBRANCH=development
+        curl https://raw.githubusercontent.com/crystaluniverse/crystaltools/$PBRANCH/install.sh > /tmp/install.sh
         bash /tmp/install.sh
-        bash /workspace/data_threefold/gitpod_scripts/install.sh
-        bash /workspace/data_threefold/gitpod_scripts/run.sh
+        source /workspace/env.sh
+        # publtools_check
+        # cd wiki_config && publishtools flatten 
+        web_install
+        website_install
+        website_run
+        echo ' - do "website_run" to run wiki or website.'
+        echo ' - do "open workspace.code-workspace" to open all relevant dirs in your editor.'
 ports:
-  - port: 8080
+  - port: 9998
     onOpen: open-browser
+  - port: 8080
+    onOpen: open-browser    
   - port: 6379
     onOpen: ignore
 vscode:
@@ -28,15 +35,15 @@ github:
   prebuilds:
     # enable for the master/default branch (defaults to true)
     master: true
-    # enable for all branches in this repo (defaults to false)
+# enable for all branches in this repo (defaults to false)
     branches: true
-    # enable for pull requests coming from this repo (defaults to true)
+# enable for pull requests coming from this repo (defaults to true)
     pullRequests: true
-    # enable for pull requests coming from forks (defaults to false)
+# enable for pull requests coming from forks (defaults to false)
     pullRequestsFromForks: false
-    # add a "Review in Gitpod" button as a comment to pull requests (defaults to true)
+# add a "Review in Gitpod" button as a comment to pull requests (defaults to true)
     addComment: true
-    # add a "Review in Gitpod" button to pull requests (defaults to false)
+# add a "Review in Gitpod" button to pull requests (defaults to false)
     addBadge: false
-    # add a label once the prebuild is ready to pull requests (defaults to false)
+# add a label once the prebuild is ready to pull requests (defaults to false)
     addLabel: prebuilt-in-gitpod
