--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@gridsome/transformer-remark": "^0.6.2",
     "@noxify/gridsome-remark-classes": "^1.0.0",
     "@noxify/gridsome-remark-table-align": "^1.0.0",
-    "autoprefixer": "^10.3.3",
+    "autoprefixer": "^9.8.7",
     "axios": "^0.21.1",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
@@ -28,9 +28,9 @@
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "pluralize": "^8.0.0",
-    "postcss": "^8.3.6",
+    "postcss": "^7.0.38",
     "sass-loader": "^10.0.2",
-    "tailwindcss": "^2.2.9",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14",
     "tailwindcss-gradients": "^3.0.0",
     "tailwindcss-tables": "^0.4.0",
     "v-tooltip": "^2.0.3",
